--- a/app/mdx/myNeovimConfig.mdx
+++ b/app/mdx/myNeovimConfig.mdx
@@ -6,3 +6,6 @@ thumbnail: /static/neovimLogo.webp
 ---
 
 WIP! Leave feedback in the comments if you have any thoughts.
+
+[Check out my config on GitHub in the
+meantime!](https://github.com/jdevries3133/nvim_config)
