--- a/app/mdx/rustCrossCompile.mdx
+++ b/app/mdx/rustCrossCompile.mdx
@@ -1,5 +1,5 @@
 ---
-title: Cross Compilation from M1 Mac to x86_64
+title: Cross Compilation from M1 Mac to x86_64 for Rust Projects
 description: |
   Cross compile Rust from M1 Mac to x86_64, ard64, or other target
   platforms
