--- a/app/mdx/vimTutorial.mdx
+++ b/app/mdx/vimTutorial.mdx
@@ -119,7 +119,7 @@ tons of [vim cheat sheets](https://vim.rtorr.com/) to help you. Good luck!
 
 You already know the basics of editing text, but transitioning towards using
 "real" vim means that you're going to learn some more "meta" vim concepts. I
-have a dedicated post about [vim "meta" concepts](./vimMetaConcepts)
+have a dedicated post about [vim "meta" concepts.](./vimMetaConcepts)
 
 ## Step 3: neovim
 
