add nnrmo image & harden image component

--- a/app/mdx/firstPost.mdx
+++ b/app/mdx/firstPost.mdx
@@ -14,7 +14,12 @@ My name is Kate, and this is the beginning of my website. I'm very used to creat
 ## Why Am I Here?
 
 Pretty much the only reason I have this site is because I'm a writer, and during intermittent lockdowns in New York in 2021, I finally finished my first manuscript. I did so during NaNoWriMo, the somewhat infamous National Novel Writing Month that takes place in November. I'd always wanted to be a part of that, having started and stopped many years before, but 2021 was when I finally did it.
-_add picture of NaNoWriMo award_
+
+<Image
+    src="/static/nano_cert.webp"
+    caption="My NaNoWriMo Certificate for 2021" 
+    alt="My NaNoWriMo Certificate for 2021" 
+/>
 
 But while I've already proved to myself that I'm a writer, being an author is a completely separate endeavor, one that involves the politics of publishing and knowing who you know. And, despite the Internet knowing and loving me, I remain unknown for now.
 
@@ -105,7 +110,7 @@ The beauty of this mdx format is that it's super flexible to add dynamic
 components later I can write these components and then it's super easy for you
 to use them! For example, I have this nifty image component:
 
-<Image src="/static/cat.webp" caption="Look at this cute little lad!" />
+<Image src="/static/cat.webp" caption="Look at this cute little lad!" alt="a cute cat I wish you could see"/>
 
 I also have a component for full-width code samples! Definitely not useful for
 your website, but the sky is the limit when it comes to the components I can
