--- a/app/mdx/postTemplate.mdx
+++ b/app/mdx/postTemplate.mdx
@@ -7,3 +7,89 @@ created: 2022-09-26  # don't forget to update this date (always format date the 
 # Beginning of Content
 
 Go ahead and write your post!
+
+You can write posts using markdown. It's super easy; here is a rundown of the syntax:
+
+# Primary Heading
+
+## Secondary Heading
+
+### Tertiary Heading
+
+#### etc.
+
+Text can be _italic_.
+
+Text can be **bold**.
+
+Text can be `monospaced`.
+
+- you
+- can
+- make some
+- bullet point lists
+
+1. Numbered
+2. Lists
+3. Exist
+4. Too
+
+Also, this looks cursed but it renders as a normal list and avoids you needing to renumber numbered lists:
+
+1. First item
+1. Second item; yes, it will display as "2. ..."
+1. You get the idea
+
+Notice that paragraphs are simply separated by two blank lines.
+
+If
+you
+put
+a
+single
+blank
+line,
+markdown
+considers
+that
+a
+continuous
+run
+of
+text
+anyway...
+
+# Notes About Metadata Header (at the top of the file)
+
+Title, description, and "created" fields are required for every post. There
+will be an error if you forget to include them. This metadata is integrated
+into the sitemap, and provided to twitter, facebook, etc. to provide nice link
+previews for your posts.
+
+## Optional Header Fields
+
+Optionally, you can include a `lastUpdated` or `thumbnail` fields. All of these
+fields are fully integrated with SEO, so their values will appear on Twitter,
+in the little link preview card, and Google will also index the `lastUpdated`
+field if you provide it, which can make your site rank higher. Be careful not
+to "lie" about `lastUpdated`, though. Only update it if you actually change the
+content of the page, or else Google will become sad (and penalize you for
+lying!).
+
+## Other Stuff (imports)
+
+The beauty of this mdx format is that it's super flexible to add dynamic
+components later I can write these components and then it's super easy for you
+to use them! For example, I have this nifty image component:
+
+<Image src="/static/cat.webp" caption="Look at this cute little lad!" alt="a cute cat I wish you could see"/>
+
+I also have a component for full-width code samples! Definitely not useful for
+your website, but the sky is the limit when it comes to the components I can
+create to support your blog posts.
+
+<CodeSample>
+```
+I am thiccc
+```
+</CodeSample>
