add missing imports to post template

--- a/app/mdx/postTemplate.mdx
+++ b/app/mdx/postTemplate.mdx
@@ -4,6 +4,9 @@ description: Describe Post Here
 created: 2022-09-26  # don't forget to update this date (always format date the same)!!
 ---
 
+import { Image } from '../components/image.tsx';
+import { CodeSample } from '../components/codeSample.tsx';
+
 # Beginning of Content
 
 Go ahead and write your post!
